<resources>
    <string name="app_name">Gymondo Test</string>
    <string name="main_toolbar_title">Exercises</string>
    <string name="detail_language_image_view_content_description">Language flag</string>
    <string name="detail_category_label">Category</string>
    <string name="detail_name_label">Name</string>
    <string name="detail_equipment_label">Equipment</string>
    <string name="detail_muscles_label">Muscles</string>
    <string name="detail_description_label">Description</string>
    <string name="detail_no_name">No name info</string>
    <string name="detail_no_category">No category info</string>
    <string name="detail_no_equipment">No equipment info</string>
    <string name="detail_no_muscles">No muscles info</string>
    <string name="detail_no_description">No description available</string>
    <string name="thumbnail_image_content_description">Exercise thumbnail</string>
    <string name="detail_images_label">Images</string>
    <string name="exercise_image_content_description">Exercise image</string>
    <string name="detail_toolbar_title">Exercise details</string>
    <string name="detail_no_images">No images available</string>
    <string name="detail_secondary_muscles_label">Secondary muscles</string>
    <string name="detail_no_secondary_muscles">No secondary muscles info</string>
</resources>
